--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
       </div>
     </div>
-    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script type="text/javascript" src="skillsdata.js"></script>
     <script type="text/javascript" src="skill.js"></script>
     <script type="text/javascript">
